--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -107,7 +107,7 @@ and Privacy</i>, April 2021.
 <font size="-1"><a href="https://doi.org/10.1145/3422337.3447824">doi:10.1145/3422337.3447824</a></font>
 </li>
 
-<li><b>TASE: Reducing latency of symbolic execution with transactional memory</b>
+<li><b><a href="./2021/NDSS.pdf">TASE: Reducing latency of symbolic execution with transactional memory</a></b>
 <br>A. Humphries, K. Cating-Subramanian, and M. K. Reiter
 <br>In <i>Proceedings of the 28th ISOC Network and Distributed System Security Symposium</i>, February 2021.
 <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2021.24327">doi:10.14722/ndss.2021.24327</a></font>
