--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -100,7 +100,7 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 16th ACM Asia Conference on Computer and Communications Security</i>, June 2021.
 </li>
 
-<li><b>Role-based deception in enterprise networks</b>
+<li><b><a href="./2021/CODASPY.pdf">Role-based deception in enterprise networks</a></b>
 <br>I. Anjum, M. Zhu, I. Polinsky, W. Enck, M. K. Reiter, and M. Singh
 <br>In <i>Proceedings of the 11th ACM Conference on Data and Application Security
 and Privacy</i>, April 2021.
