--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2242,18 +2242,18 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <table border=0 cellpadding=3>
 
 <tr valign=top><td>2021</td>
-<td><b>Using Amnesia to detect credential database breaches</b>
+<td><b><a href="./2021/USENIX1.pdf">Using Amnesia to detect credential database breaches</a></b>
 <br>K. C. Wang and M. K. Reiter.
 </td></tr>
 
 <tr valign=top><td></td>
-<td><b>Effect of mood, location, trust, and presence of others on video-based social authentication</b>
+<td><b><a href="./2021/USENIX2.pdf">Effect of mood, location, trust, and presence of others on video-based social authentication</a></b>
 <br>C. Guo, B. Campbell, A. Kapadia, M. K. Reiter, and K. Caine.
 </td></tr>
   
 <tr valign=top><td>2020</td>
 <td><b><a href="./2020/USENIX.pdf">Detecting stuffing of a user's credentials at her own accounts</a></b>
-<br>K. C. Wang and M. K. Reiter
+<br>K. C. Wang and M. K. Reiter.  Pages 2201&#8211;2218.
 </td></tr>  
   
 <tr valign=top><td>2016</td>
