--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -85,12 +85,12 @@ be reposted without the explicit permission of the copyright holder.
 
 <ul>
 
-<li><b><a name="2021">Using Amnesia to detect credential database breaches</a></b>
+<li><b><a name="2021"><a href="./2021/USENIX1.pdf">Using Amnesia to detect credential database breaches</a></a></b>
 <br>K. C. Wang and M. K. Reiter
 <br>In <i>Proceedings of the 30th USENIX Security Symposium</i>, August 2021.
 </li>
 
-<li><b>Effect of mood, location, trust, and presence of others on video-based social authentication</b>
+<li><b><a href="./2021/USENIX2.pdf">Effect of mood, location, trust, and presence of others on video-based social authentication</a></b>
 <br>C. Guo, B. Campbell, A. Kapadia, M. K. Reiter, and K. Caine
 <br>In <i>Proceedings of the 30th USENIX Security Symposium</i>, August 2021.
 </li>
@@ -115,7 +115,7 @@ and Privacy</i>, April 2021.
 
 <li><b><a name="2020"><a href="./2020/USENIX.pdf">Detecting stuffing of a user’s credentials at her own accounts</a></a></b>
 <br>K. C. Wang and M. K. Reiter
-<br>In <i>Proceedings of the 29th USENIX Security Symposium</i>, August 2020.
+<br>In <i>Proceedings of the 29th USENIX Security Symposium</i>, pages 2201&#8211;2218, August 2020.
 </li>
 
 <li><b><a href="./2020/ICML.pdf">Defense through diverse directions</a></b>
@@ -145,7 +145,7 @@ and Privacy</i>, April 2021.
 <br>M. Yin, D. Malkhi, M. K. Reiter, G. G. Gueta, and I. Abraham    
 <br>In <i>Proceedings of the 38th ACM Symposium on Principles of Distributed Computing</i>, July 2019.
 <font size="-1"><a href="https://doi.org/10.1145/3293611.3331591">doi:10.1145/3293611.3331591</a></font>
-<br>Notes: Variants of this protocol have been adopted by <a href="https://developers.libra.org/docs/crates/consensus">Libra</a> and <a href="https://medium.com/@cypherium/what-is-hotstuff-and-why-is-it-a-big-deal-213f39696763">Cypherium</a>.  An <a href="https://github.com/hot-stuff/libhotstuff">example implementation</a> is available, as is its implementation within the <a href="https://github.com/libra/libra">Libra codebase</a>.
+<br>Notes: Variants of this protocol have been adopted by <a href="https://developers.diem.com/main/docs/state-machine-replication-paper#abstract">Diem</a> and <a href="https://medium.com/@cypherium/what-is-hotstuff-and-why-is-it-a-big-deal-213f39696763">Cypherium</a>.  An <a href="https://github.com/hot-stuff/libhotstuff">example implementation</a> is available, as is its implementation within the <a href="https://github.com/diem/diem">Diem codebase</a>.
 </li>
 
 <li><b><a href="./2019/DSN.pdf">SBFT: A scalable and decentralized trust infrastructure</a></b>
