Added a code repo

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -98,6 +98,7 @@ be reposted without the explicit permission of the copyright holder.
 <li><b>Malware makeover: Breaking ML-based static analysis by modifying executable bytes</b>
 <br>K. Lucas, M. Sharif, L. Bauer, M. K. Reiter, and S. Shintre
 <br>In <i>Proceedings of the 16th ACM Asia Conference on Computer and Communications Security</i>, June 2021.
+<br>Notes: An <a href="https://github.com/pwwl/enhanced-binary-diversification">example implementation</a> is available.
 </li>
 
 <li><b><a href="./2021/CODASPY.pdf">Role-based deception in enterprise networks</a></b>
