--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -95,9 +95,10 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 30th USENIX Security Symposium</i>, August 2021.
 </li>
 
-<li><b>Malware makeover: Breaking ML-based static analysis by modifying executable bytes</b>
+<li><b><a href="./2021/ASIACCS.pdf">Malware makeover: Breaking ML-based static analysis by modifying executable bytes</a></b>
 <br>K. Lucas, M. Sharif, L. Bauer, M. K. Reiter, and S. Shintre
 <br>In <i>Proceedings of the 16th ACM Asia Conference on Computer and Communications Security</i>, June 2021.
+<font size="-1"><a href="https://doi.org/10.1145/3433210.3453086">doi:10.1145/3433210.3453086</a></font>
 <br>Notes: An <a href="https://github.com/pwwl/enhanced-binary-diversification">example implementation</a> is available.
 </li>
 
