Updated home page

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   <div class="centervh">
     <table cellpadding=0>
       <tr>
-	<td valign="top" style="padding:0 10px 0 0" rowspan=3>
+	<td valign="middle" style="padding:0 10px 0 0" rowspan=3>
 	  <center>
 	    <img src="./pictures/HighResDHSST-8315-medium-slate.jpg" height=240px>
 	    <br><strong>External view</strong>
 	  </center>
 	</td>
-	<td valign="top" align="right">
+	<td valign="middle" align="right">
 	  <font size="+3"><b>Michael Reiter</b></font><br>
-	  <strong>Professor, <a href="http://www.duke.edu/">Duke University</a><br>
+	  <strong><a href="https://library.duke.edu/rubenstein/uarchives/history/articles/james-buchanan-duke">James B. Duke</a> Distinguished Professor<br>
+	    <a href="http://www.duke.edu/">Duke University</a><br>
 	    Departments of <a href="http://www.cs.duke.edu/">Computer Science</a> and<br>
 	    <a href="http://www.ece.duke.edu">Electrical & Computer Engineering</a><br>&nbsp;
 	  </strong>
@@ -119,8 +120,8 @@
     <p>Here are some upcoming conferences in which I'm somehow involved.
 
       <ul>
-	<li><a href="https://www.usenix.org/conference/atc21">USENIX Annual Technical Conference (ATC) 2021</a></li>
 	<li><a href="https://esorics2021.athene-center.de">26th European Symposium on Research in Computer Security</a></li>
+	<li><a href="https://www.usenix.org/conference/usenixsecurity22">31st USENIX Security Symposium</a></li>
       </ul>
     </p>
   </div>
