--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 	  </div>
 	  <div class="frame">
 	    <table>
-	      <tr><td style="text-align:center; padding:0 5px 0 5px"><span class="fas fa-chalkboard-teacher fa-2x"></span></td></tr>
-	      <tr><td style="text-align:center">spring 2021</td></tr>
+	      <tr><td style="text-align:center; padding:0 5px 0 5px"><a href="https://sakai.duke.edu/portal/site/fdd7dfc0-dfcb-441c-b550-4b0530109d2b"><span class="fas fa-chalkboard-teacher fa-2x"></span></a></td></tr>
+	      <tr><td style="text-align:center">fall 2021</td></tr>
 	    </table>
 	  </div>
 	</td>
