Updating Ziqiao affiliation

--- a/students.html
+++ b/students.html
@@ -125,7 +125,7 @@ via System-Wide Coordination and Optimization</a></i>
 <br>Thesis: <i><a href="https://doi.org/10.17615/xt8k-ee40">Cache-Based Side-Channel Attacks in Multi-Tenant Public Clouds and Their Countermeasures</a></i>
 </li>
 
-<li><a href="https://www.linkedin.com/in/ziqiao-zhou-a02b9b78/">Ziqiao Zhou</a>, Ph.D., 2020.
+<li><a href="https://www.microsoft.com/en-us/research/people/ziqiaozhou/">Ziqiao Zhou</a>, Ph.D., 2020.
 <br>Thesis: <i><a href="https://doi.org/10.17615/h4m8-cq49">Evaluating Information Leakage by Quantitative and Interpretable Measurements</a></i>
 </li>
 </ul>
