Added link to TASE implementation

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -113,6 +113,8 @@ and Privacy</i>, April 2021.
 <br>A. Humphries, K. Cating-Subramanian, and M. K. Reiter
 <br>In <i>Proceedings of the 28th ISOC Network and Distributed System Security Symposium</i>, February 2021.
 <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2021.24327">doi:10.14722/ndss.2021.24327</a></font>
+<br>Notes: An <a href="https://github.com/adamhumphriescs/TASE_Release">example implementation</a> is available.
+
 </li>
 
 <li><b><a name="2020"><a href="./2020/USENIX.pdf">Detecting stuffing of a user’s credentials at her own accounts</a></a></b>
