Added link to Sheng Liu dissertation

--- a/students.html
+++ b/students.html
@@ -89,7 +89,7 @@ Proof-Construction Strategies for Distributed Access-Control Systems</a></i>
 <br>Thesis: <i><a href="https://doi.org/10.17615/a806-4792">Replication and Placement for Security in Distributed Systems</a></i>
 </li>
 <li><a href="https://www.linkedin.com/in/sheng-liu-00345b15a/">Sheng Liu</a>, Ph.D., 2021.
-<br>Thesis: <i>Efficient and Safe Migration of Network Functions Using Software-Defined Networking</i>
+<br>Thesis: <i><a href="https://doi.org/10.17615/tpbb-v928">Efficient and Safe Migration of Network Functions Using Software-Defined Networking</a></i>
 <li><a href="http://www.linkedin.com/in/jonmccune/">Jonathan McCune</a>, Ph.D., 2009.
 <br>Thesis: <i><a href="./theses/mccune.pdf">Reducing the Trusted Computing Base for Applications on Commodity Systems</a></i>
 </li>
