Moved departments and Duke

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	<td valign="middle" align="right">
 	  <font size="+3"><b>Michael Reiter</b></font><br>
 	  <strong><a href="https://library.duke.edu/rubenstein/uarchives/history/articles/james-buchanan-duke">James B. Duke</a> Distinguished Professor<br>
-	    <a href="http://www.duke.edu/">Duke University</a><br>
 	    Departments of <a href="http://www.cs.duke.edu/">Computer Science</a> and<br>
-	    <a href="http://www.ece.duke.edu">Electrical & Computer Engineering</a><br>&nbsp;
+	    <a href="http://www.ece.duke.edu">Electrical & Computer Engineering</a><br>
+	    <a href="http://www.duke.edu/">Duke University</a><br>&nbsp;
 	  </strong>
 	</td>
       </tr>
