--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -149,7 +149,7 @@ and Privacy</i>, April 2021.
 <br>M. Yin, D. Malkhi, M. K. Reiter, G. G. Gueta, and I. Abraham    
 <br>In <i>Proceedings of the 38th ACM Symposium on Principles of Distributed Computing</i>, July 2019.
 <font size="-1"><a href="https://doi.org/10.1145/3293611.3331591">doi:10.1145/3293611.3331591</a></font>
-<br>Notes: Variants of this protocol have been adopted by <a href="https://developers.diem.com/main/docs/state-machine-replication-paper#abstract">Diem</a> and <a href="https://medium.com/@cypherium/what-is-hotstuff-and-why-is-it-a-big-deal-213f39696763">Cypherium</a>.  An <a href="https://github.com/hot-stuff/libhotstuff">example implementation</a> is available, as is its implementation within the <a href="https://github.com/diem/diem">Diem codebase</a>.
+<br>Notes: Variants of this protocol have been adopted by <a href="https://developers.diem.com/docs/technical-papers/state-machine-replication-paper/">Diem</a> and <a href="https://medium.com/@cypherium/what-is-hotstuff-and-why-is-it-a-big-deal-213f39696763">Cypherium</a>.  An <a href="https://github.com/hot-stuff/libhotstuff">example implementation</a> is available, as is its implementation within the <a href="https://github.com/diem/diem">Diem codebase</a>.
 </li>
 
 <li><b><a href="./2019/DSN.pdf">SBFT: A scalable and decentralized trust infrastructure</a></b>
