--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body bgcolor="white" text="black">
-  <div class="centersh">
+  <div class="centervh">
     <table cellpadding=0>
       <tr>
 	<td valign="middle" style="padding:0 10px 0 0" rowspan=3>
