Adding advert for faculty job opening

--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
 
     <h2>Advertisements</h2>
 
+    <p>Duke University has faculty job openings in AI/ML/Computational Economics (<a href="https://academicjobsonline.org/ajo/jobs/19916">ad</a>).</p>
     <p>Here are some upcoming conferences in which I'm somehow involved.
-
       <ul>
-	<li><a href="https://esorics2021.athene-center.de">26th European Symposium on Research in Computer Security</a></li>
 	<li><a href="https://www.usenix.org/conference/usenixsecurity22">31st USENIX Security Symposium</a></li>
       </ul>
     </p>
