--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -85,7 +85,12 @@ be reposted without the explicit permission of the copyright holder.
 
 <ul>
 
-<li><b><a name="2021"><a href="./2021/USENIX1.pdf">Using Amnesia to detect credential database breaches</a></a></b>
+<li><b><a name="2021"><a href="./2021/OOPSLA.pdf">Interpretable noninterference measurement and its application to processor designs</a></a></b>
+<br>Z. Zhou and M. K. Reiter
+<br><i>Proceedings of the ACM on Programming Languages</i> 5(OOPSLA), October 2021. <font size="-1"><a href="https://doi.org/10.1145/3485518">doi:10.1145/3485518</a></font>
+</li>
+  
+<li><b><a href="./2021/USENIX1.pdf">Using Amnesia to detect credential database breaches</a></b>
 <br>K. C. Wang and M. K. Reiter
 <br>In <i>Proceedings of the 30th USENIX Security Symposium</i>, August 2021.
 </li>
