Moved advertisement to announcement

--- a/index.html
+++ b/index.html
@@ -100,12 +100,16 @@
 	    </ul>
 	  </p>
 	  
-	  <h2 style="margin-top:1.5cm;">Announcements</h2>
+	  <h2 style="margin-top:1cm;">Announcements</h2>
 
 	  <p>I usually have openings in my group for new
 	    Ph.D. students.  Please
 	    read <a href="./students.html#future">this</a> if you are
 	    interested in applying.
+	  </p>
+	  <p>Duke University has faculty job openings in
+	    AI/ML/Computational Economics
+	    (<a href="https://academicjobsonline.org/ajo/jobs/19916">ad</a>).
 	  </p>
       </td>
       <td align="right" width=300px>
@@ -117,7 +121,6 @@
 
     <h2>Advertisements</h2>
 
-    <p>Duke University has faculty job openings in AI/ML/Computational Economics (<a href="https://academicjobsonline.org/ajo/jobs/19916">ad</a>).</p>
     <p>Here are some upcoming conferences in which I'm somehow involved.
       <ul>
 	<li><a href="https://www.usenix.org/conference/usenixsecurity22">31st USENIX Security Symposium</a></li>
