--- a/students.html
+++ b/students.html
@@ -11,8 +11,8 @@
 <hr>
 <h3><a name="future">Future students</a></h3>
 <p>
-  If you are interested in joining my new research group at Duke as a
-  Ph.D.  student, a formal application to
+  If you are interested in joining my research group at Duke as a
+  Ph.D. student, a formal application to
   the <a href="https://www.cs.duke.edu/">Department of Computer
   Science</a> or <a href="https://www.ece.duke.edu">Department of
   Electrical and Computer Engineering</a> is a necessary first step.
@@ -37,11 +37,12 @@ application substantially.
 <h3><a name="present">Present students</a></h3>
 <p> I currently advise the following Ph.D. students:
 <ul>
-<li>Andrew Chi</li>
 <li>Adam Humphries</li>
 <li>Zonghao Huang</li>
 <li>Zehuan Li</li>
+<li>Mridu Nanda</li>
 <li>Andrew Reed</li>
+<li>Sara Schwarz-Iglesias</li>
 <li>Ke Coby Wang</li>
 </ul>
 </p>
