Added security hiring ad

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 	    interested in applying.
 	  </p>
 	  <p>Duke University has faculty job openings in
-	    AI/ML/Computational Economics
+	    Security and Privacy
+	    (<a href="https://academicjobsonline.org/ajo/jobs/20145">ad</a>)
+	    and in AI/ML/Computational Economics
 	    (<a href="https://academicjobsonline.org/ajo/jobs/19916">ad</a>).
 	  </p>
       </td>
