Moved Coby to graduated

--- a/students.html
+++ b/students.html
@@ -43,7 +43,6 @@ application substantially.
 <li>Mridu Nanda</li>
 <li>Andrew Reed</li>
 <li>Sara Schwarz-Iglesias</li>
-<li>Ke Coby Wang</li>
 </ul>
 </p>
 
@@ -114,6 +113,8 @@ Consistent Scalable Edge Services</a></i>
 <br>Thesis: <i><a href="./theses/sekar.pdf">Effective Network Management
 via System-Wide Coordination and Optimization</a></i>
 </li>
+<li>Ke Coby Wang, Ph.D., 2021.
+<br>Thesis: <i>Federated Detection of Cross-Site Credential Vulnerabilities and Attacks</i></li>
 <li><a href="http://www.linkedin.com/pub/lei-wei/2a/155/b65/">Lei Wei</a>, Ph.D., 2013.
 <br>Thesis: <i><a href="https://doi.org/10.17615/kv0e-4e39">Privacy-Preserving Regular Expression Evaluation on Encrypted Data</a></i></li>
 <li><a href="https://www.linkedin.com/in/qiuyuxiao/">Qiuyu Xiao</a>, Ph.D., 2019.
