Added link to Coby's dissertation

--- a/students.html
+++ b/students.html
@@ -114,7 +114,7 @@ Consistent Scalable Edge Services</a></i>
 via System-Wide Coordination and Optimization</a></i>
 </li>
 <li>Ke Coby Wang, Ph.D., 2021.
-<br>Thesis: <i>Federated Detection of Cross-Site Credential Vulnerabilities and Attacks</i></li>
+<br>Thesis: <i><a href="https://doi.org/10.17615/y99t-yj52">Federated Detection of Cross-Site Credential Vulnerabilities and Attacks</a></i></li>
 <li><a href="http://www.linkedin.com/pub/lei-wei/2a/155/b65/">Lei Wei</a>, Ph.D., 2013.
 <br>Thesis: <i><a href="https://doi.org/10.17615/kv0e-4e39">Privacy-Preserving Regular Expression Evaluation on Encrypted Data</a></i></li>
 <li><a href="https://www.linkedin.com/in/qiuyuxiao/">Qiuyu Xiao</a>, Ph.D., 2019.
