Added recent papers

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -75,6 +75,7 @@ be reposted without the explicit permission of the copyright holder.
       <td></td>
       <td><a href="#2020">2020</a></td>
       <td><a href="#2021">2021</a></td>
+      <td><a href="#2022">2022</a></td>
     </tr>
   </table>
 </p>
@@ -84,6 +85,22 @@ be reposted without the explicit permission of the copyright holder.
 <hr>
 
 <ul>
+
+<li><b><a name="2022">Practical integration via separable bijective networks</a></b>
+<br>C. M. Bender, P. Emmanuel, M. K. Reiter, and J. Oliva
+<br>In <i>Proceedings of the 10th International Conference on Learning
+Representations</i>, April 2022.
+</li>
+  
+<li><b><a href="./2022/AAAI.pdf">Coordinating followers to reach better equilibria: End-to-end gradient descent for Stackelberg games</a></b>
+<br>K. Wang, L. Xu, A. Perrault, M. K. Reiter, and M. Tambe
+<br>In <i>Proceedings of the 36th AAAI Conference on Artificial Intelligence</i>, February 2022.  
+</li>
+
+<li><b><a name="2022/IJIS"><a href="./2022/IJIS.pdf">Defeating traffic analysis via differential privacy: A case study on streaming traffic</a></a></b>
+<br>X. Zhang, J. Hamm, M. K. Reiter, and Y. Zhang
+<br><i>International Journal on Information Security</i>, January 2022. <font size=-1"><a href="https://doi.org/10.1007/s10207-021-00574-3">doi:10.1007/s10207-021-00574-3</a></font>
+</li>
 
 <li><b><a name="2021"><a href="./2021/OOPSLA.pdf">Interpretable noninterference measurement and its application to processor designs</a></a></b>
 <br>Z. Zhou and M. K. Reiter
@@ -188,6 +205,8 @@ Conference on Computer Systems</i>, March 2019.
 <br>X. Zhang, J. Hamm, M. K. Reiter, and Y. Zhang
 <br>In <i>Proceedings of the 26th ISOC Network and Distributed System Security Symposium</i>, February 2019.  
 <font size=-1><a href="https://dx.doi.org/10.14722/ndss.2019.23210">doi:10.14722/ndss.2019.23210</a></font>    
+<br>Note: This paper is superceded by <a href="#2022/IJIS">the
+journal version</a>.
 </li>
 
 <li><b><a name="2018"><a href="./2018/CoNEXT.pdf">Intent-driven composition of resource-management SDN applications</a></a></b>
