Added ICLR paper

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -86,7 +86,7 @@ be reposted without the explicit permission of the copyright holder.
 
 <ul>
 
-<li><b><a name="2022">Practical integration via separable bijective networks</a></b>
+<li><b><a name="2022"><a href="./2022/ICLR.pdf">Practical integration via separable bijective networks</a></a></b>
 <br>C. M. Bender, P. Emmanuel, M. K. Reiter, and J. Oliva
 <br>In <i>Proceedings of the 10th International Conference on Learning
 Representations</i>, April 2022.
