Added DISC 2021 paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1892,6 +1892,12 @@ camera-phones for human-verifiable authentication</a></a></b>
 <p><b><i><a name="DISC">International Symposium on Distributed
 Computing (DISC)</a></i></b>
 <table border=0 cellpadding=3>
+<tr valign=top><td>2021</td>
+<td><b><a href="./2021/DISC.pdf">Brief announcement: Communication-efficient
+      BFT using small trusted hardware to tolerate minority corruption</a></b>
+<br>S. Yandamuri, I. Abraham, K. Nayak, and M. Reiter.  <font size="-1"><a href="https://doi.org/10.4230/LIPIcs.DISC.2021.62">doi:10.4230/LIPIcs.DISC.2021.62</a></font>
+</td></tr>
+
 <tr valign=top><td>2007</td>
 <td><b><a href="./2007/DISC.pdf">Probabilistic opaque quorum systems</a></b>
 <br>M. G. Merideth and M. K. Reiter.  Lecture Notes in Computer
