--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -106,6 +106,13 @@ Representations</i>, April 2022.
 <br>Z. Zhou and M. K. Reiter
 <br><i>Proceedings of the ACM on Programming Languages</i> 5(OOPSLA), October 2021. <font size="-1"><a href="https://doi.org/10.1145/3485518">doi:10.1145/3485518</a></font>
 </li>
+
+<li><b><a href="./2021/DISC.pdf">Brief announcement: Communication-efficient
+BFT using small trusted hardware to tolerate minority corruption</a></b>
+<br>S. Yandamuri, I. Abraham, K. Nayak, and M. Reiter
+<br><i>Proceedings of the 35th International Symposium on Distributed Computing</i>, October 2021.
+<font size="-1"><a href="https://doi.org/10.4230/LIPIcs.DISC.2021.62">doi:10.4230/LIPIcs.DISC.2021.62</a></font>
+</li>
   
 <li><b><a href="./2021/USENIX1.pdf">Using Amnesia to detect credential database breaches</a></b>
 <br>K. C. Wang and M. K. Reiter
