Updated current students list

--- a/students.html
+++ b/students.html
@@ -43,6 +43,8 @@ application substantially.
 <li>Mridu Nanda</li>
 <li>Andrew Reed</li>
 <li>Sara Schwarz-Iglesias</li>
+<li>Xinyuan Zhang</li>
+<li>Yujie Zhang</li>
 </ul>
 </p>
 
