Updated pubs list

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1796,6 +1796,11 @@ in Computer Science 5905, pages 132&#8211;147.
 
 <p><b><i><a name="ICML">International Conference on Machine Learning (ICML)</a></i></b>
 <table border=0 cellpadding=3>
+<tr valign=top><td>2022</td>
+<td><b><a href="./2022/ICML.pdf">Constrained gradient descent: A powerful and principled evasion attack against neural networks</a></b>
+<br>W. Lin, K. Lucas, L. Bauer, M. K. Reiter, and M. Sharif
+</td></tr>
+
 <tr valign=top><td>2020</td>
 <td><b><a href="./2020/ICML.pdf">Defense through diverse directions</a></b>
 <br>C. M. Bender, Y. Li, Y. Shi, M. K. Reiter, and J. B. Oliva
@@ -2234,6 +2239,11 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <p><b><i><a name="USENIX_Security">USENIX Security Symposium</a></i></b>
 <table border=0 cellpadding=3>
 
+<tr valign=top><td>2023</td>
+<td><b>Distance-aware private set intersection</a></b>
+<br>A. Chakraborti, G. Fanti, and M. K. Reiter.
+</td></tr>
+  
 <tr valign=top><td>2021</td>
 <td><b><a href="./2021/USENIX1.pdf">Using Amnesia to detect credential database breaches</a></b>
 <br>K. C. Wang and M. K. Reiter.
