--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -76,6 +76,7 @@ be reposted without the explicit permission of the copyright holder.
       <td><a href="#2020">2020</a></td>
       <td><a href="#2021">2021</a></td>
       <td><a href="#2022">2022</a></td>
+      <td><a href="#2023">2023</a></td>
     </tr>
   </table>
 </p>
@@ -86,7 +87,17 @@ be reposted without the explicit permission of the copyright holder.
 
 <ul>
 
-<li><b><a name="2022"><a href="./2022/ICLR.pdf">Practical integration via separable bijective networks</a></a></b>
+<li><b><a name="2023">Distance-aware private set intersection</a></b>
+<br>A. Chakraborti, G. Fanti, and M. K. Reiter
+<br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
+</li>
+  
+<li><b><a name="2022"><a href="./2022/ICML.pdf">Constrained gradient descent: A powerful and principled evasion attack against neural networks</a></a></b>
+<br>W. Lin, K. Lucas, L. Bauer, M. K. Reiter, and M. Sharif
+<br>In <i>Proceedings of the 39th International Conference on Machine Learning</i>, July 2022.
+</li>
+  
+<li><b><a href="./2022/ICLR.pdf">Practical integration via separable bijective networks</a></b>
 <br>C. M. Bender, P. Emmanuel, M. K. Reiter, and J. Oliva
 <br>In <i>Proceedings of the 10th International Conference on Learning
 Representations</i>, April 2022.
