--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -199,7 +199,7 @@ be reposted without the explicit permission of the copyright holder.
 <table border=0 cellpadding=3>
 <tr valign=top><td>2022</td>
 <td><b><a href="./2022/AAAI.pdf">Coordinating followers to reach better equilibria: End-to-end gradient descent for Stackelberg games</a></b>
-<br>K. Wang, L. Xu, A. Perrault, M. K. Reiter, and M. Tambe.
+<br>K. Wang, L. Xu, A. Perrault, M. K. Reiter, and M. Tambe.  <font size="-1"><a href="https://doi.org/10.1609/aaai.v36i5.20457">doi:10.1609/aaai.v36i5.20457</a></font>
 </td></tr>
 </table></p>
 
