--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -105,7 +105,7 @@ Representations</i>, April 2022.
   
 <li><b><a href="./2022/AAAI.pdf">Coordinating followers to reach better equilibria: End-to-end gradient descent for Stackelberg games</a></b>
 <br>K. Wang, L. Xu, A. Perrault, M. K. Reiter, and M. Tambe
-<br>In <i>Proceedings of the 36th AAAI Conference on Artificial Intelligence</i>, February 2022.  
+<br>In <i>Proceedings of the 36th AAAI Conference on Artificial Intelligence</i>, February 2022.  <font size="-1"><a href="https://doi.org/10.1609/aaai.v36i5.20457">doi:10.1609/aaai.v36i5.20457</a></font>
 </li>
 
 <li><b><a name="2022/IJIS"><a href="./2022/IJIS.pdf">Defeating traffic analysis via differential privacy: A case study on streaming traffic</a></a></b>
