Added CCS 2022 citation

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -209,6 +209,11 @@ be reposted without the explicit permission of the copyright holder.
 Security (CCS)</a></i></b>
 <table border=0 cellpadding=3>
 
+<tr valign=top><td>2022</td>
+<td><b>ENGRAFT: Enclave-guarded Raft on Byzantine faulty nodes</b>
+<br>W. Wang, S. Deng, J. Niu, M. K. Reiter, and Y. Zhang.
+</td></tr>
+  
 <tr valign=top><td>2019</td>
 <td><b><a href="./2019/CCS.pdf">Efficient verifiable secret sharing with share recovery in BFT protocols</a></b>
 <br>S. Basu, A. Tomescu, I. Abraham, D. Malkhi, M. K. Reiter, and E. G. Sirer.
