--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -91,8 +91,13 @@ be reposted without the explicit permission of the copyright holder.
 <br>A. Chakraborti, G. Fanti, and M. K. Reiter
 <br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
 </li>
-  
-<li><b><a name="2022"><a href="./2022/ICML.pdf">Constrained gradient descent: A powerful and principled evasion attack against neural networks</a></a></b>
+
+<li><b><a name="2022">ENGRAFT: Enclave-guarded Raft on Byzantine faulty nodes</a></b>
+<br>W. Wang, S. Deng, J. Niu, M. K. Reiter, and Y. Zhang
+<br>In <i>Proceedings of the 29th ACM Conference on Computer and Communications Security</i>, November 2022.
+</li>
+
+<li><b><a href="./2022/ICML.pdf">Constrained gradient descent: A powerful and principled evasion attack against neural networks</a></b>
 <br>W. Lin, K. Lucas, L. Bauer, M. K. Reiter, and M. Sharif
 <br>In <i>Proceedings of the 39th International Conference on Machine Learning</i>, July 2022.
 </li>
