Added CSF 2023 ref

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1080,6 +1080,11 @@ href="http://dx.doi.org/10.1007/11863908_19">doi:10.1007/11863908_19</a> &nbsp; 
 
 <p><b><i><a name="CSF">IEEE Computer Security Foundations (CSF)</a></i></b>
 <table border=0 cellpadding=3>
+<tr valign=top><td>2022</td>
+<td><b>Optimally hiding object sizes with constrained padding</b>
+<br>A. C. Reed and M. K. Reiter.
+</td></tr>
+
 <tr valign=top><td>1997</td>
 <td><b><a href="./1997/CSFW.pdf">Unreliable intrusion detection in
 distributed computations</a></b>
