--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -92,6 +92,11 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
 </li>
 
+<li><b>Optimally hiding object sizes with constrained padding</b>
+<br>A. C. Reed and M. K. Reiter
+<br>In <i>Proceedings of the 36th IEEE Computer Security Foundations Symposium</i>, July 2023.
+</li>
+
 <li><b><a name="2022">ENGRAFT: Enclave-guarded Raft on Byzantine faulty nodes</a></b>
 <br>W. Wang, S. Deng, J. Niu, M. K. Reiter, and Y. Zhang
 <br>In <i>Proceedings of the 29th ACM Conference on Computer and Communications Security</i>, November 2022.
