--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -210,8 +210,8 @@ Security (CCS)</a></i></b>
 <table border=0 cellpadding=3>
 
 <tr valign=top><td>2022</td>
-<td><b>ENGRAFT: Enclave-guarded Raft on Byzantine faulty nodes</b>
-<br>W. Wang, S. Deng, J. Niu, M. K. Reiter, and Y. Zhang.
+<td><b><a href="./2022/CCS.pdf">ENGRAFT: Enclave-guarded Raft on Byzantine faulty nodes</a></b>
+<br>W. Wang, S. Deng, J. Niu, M. K. Reiter, and Y. Zhang.  <font size="-1"><a href="https://doi.org/10.1145/3548606.3560639">doi:10.1145/3548606.3560639</a></font>
 </td></tr>
   
 <tr valign=top><td>2019</td>
