--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -97,9 +97,9 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 36th IEEE Computer Security Foundations Symposium</i>, July 2023.
 </li>
 
-<li><b><a name="2022">ENGRAFT: Enclave-guarded Raft on Byzantine faulty nodes</a></b>
+<li><b><a name="2022"><a href="./2022/CCS.pdf">ENGRAFT: Enclave-guarded Raft on Byzantine faulty nodes</a></a></b>
 <br>W. Wang, S. Deng, J. Niu, M. K. Reiter, and Y. Zhang
-<br>In <i>Proceedings of the 29th ACM Conference on Computer and Communications Security</i>, November 2022.
+<br>In <i>Proceedings of the 29th ACM Conference on Computer and Communications Security</i>, November 2022. <font size="-1"><a href="https://doi.org/10.1145/3548606.3560639">doi:10.1145/3548606.3560639</a></font>
 </li>
 
 <li><b><a href="./2022/ICML.pdf">Constrained gradient descent: A powerful and principled evasion attack against neural networks</a></b>
