--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1128,6 +1128,11 @@ version</a>.
 
 <p><b><i><a name="INFOCOM">IEEE International Conference on Computer Communications (INFOCOM)</a></i></b>
 <table border=0 cellpadding=3>
+<tr valign=top><td>2023</td>
+<td><b>Nimble: Fast and safe migration of network functions</b>
+<br>S. Liu, T. A. Benson, and M. K. Reiter
+</td></tr>
+
 <tr valign=top><td>2018</td>
 <td><b><a href="./2018/INFOCOM.pdf">Differentially private access patterns for searchable symmetric encryption</a></b>
 <br>G. Chen, T.-H. Lai, M. K. Reiter, and Y. Zhang.
