--- a/students.html
+++ b/students.html
@@ -115,7 +115,7 @@ Consistent Scalable Edge Services</a></i>
 <br>Thesis: <i><a href="./theses/sekar.pdf">Effective Network Management
 via System-Wide Coordination and Optimization</a></i>
 </li>
-<li>Ke Coby Wang, Ph.D., 2021.
+<li><a href="https://kcwang.io">Ke Coby Wang</a>, Ph.D., 2021.
 <br>Thesis: <i><a href="https://doi.org/10.17615/y99t-yj52">Federated Detection of Cross-Site Credential Vulnerabilities and Attacks</a></i></li>
 <li><a href="http://www.linkedin.com/pub/lei-wei/2a/155/b65/">Lei Wei</a>, Ph.D., 2013.
 <br>Thesis: <i><a href="https://doi.org/10.17615/kv0e-4e39">Privacy-Preserving Regular Expression Evaluation on Encrypted Data</a></i></li>
