--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -92,6 +92,11 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
 </li>
 
+<li><b>Adversarial training for raw-binary malware classifiers</b>
+<br>K. Lucas, S. Pai, W. Lin, L. Bauer, M. K. Reiter, and M. Sharif
+<br>In <i>Proceedings of the 32nd USENIX Security Symposium</i>, August 2023.
+</li>
+
 <li><b>Optimally hiding object sizes with constrained padding</b>
 <br>A. C. Reed and M. K. Reiter
 <br>In <i>Proceedings of the 36th IEEE Computer Security Foundations Symposium</i>, July 2023.
