--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -103,7 +103,7 @@ be reposted without the explicit permission of the copyright holder.
 </li>
 
 <li><b>Nimble: Fast and safe migration of network functions</b>
-<br>S. Liu, T. A. Benson, and M. K. Reiter
+<br>S. Liu, M. K. Reiter, and T. A. Benson
 <br>In <i>Proceedings of the 42nd IEEE International Conference on Computer Communications</i>, May 2023.
 </li>
 
